--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,13 +12,15 @@
         <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
         <li class="nav-item"><a href="/posts" class="nav-link">Board</a></li>
       </ul>
-    </div>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          ...
-          <ul class="navbar-nav ml-auto"> <!-- 1 -->
-            <li class="nav-item"><a href="/users" class="nav-link">Users</a></li>
-            <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
-          </ul>
+      <ul class="navbar-nav ml-auto"> <!-- 1 -->
+        <% if(isAuthenticated){ %> <!-- 1 -->
+          <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
+          <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
+        <% } else { %>
+          <li class="nav-item"><a href="/users/new" class="nav-link">Sign Up</a></li>
+          <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+        <% } %>
+      </ul>
     </div>
   </div>
 </nav>
