--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -28,24 +28,27 @@
 
           <div class="col-md-5 col-lg-4 col-xl-3 order-sm-1 order-md-2"> <!-- 1 -->
             <div class="post-info card m-2 p-2">
-              <div><span>Created</span> : <span data-date-time="<%= post.createdAt %>"></span></div> <!-- 2 -->
+              <div class="border-bottom pb-1 mb-1"> <!-- 1 -->
+                <span>Author</span> : <%= post.author ? post.author.username : "" %>
+              </div>
+              <div><span>Created</span> : <span data-date-time="<%= post.createdAt %>"><%= post.createdAt %></span></div>
               <% if(post.updatedAt) { %>
-                <div><span>Updated</span> : <span data-date-time="<%= post.updatedAt %>"></span></div> <!-- 2 -->
+                <div><span>Updated</span> : <span data-date-time="<%= post.updatedAt %>"><%= post.updatedAt %></span></div>
               <% } %>
             </div>
           </div>
-
         </div>
       </div>
 
       <div class="mt-3">
         <a class="btn btn-primary" href="/posts">Back</a>
-        <a class="btn btn-primary" href="/posts/<%= post._id %>/edit">Edit</a>
-        <form action="/posts/<%= post._id %>?_method=delete" method="post" class="d-inline">
-          <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
-        </form>
+        <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %> <!-- 1 -->
+          <a class="btn btn-primary" href="/posts/<%= post._id %>/edit">Edit</a>
+          <form action="/posts/<%= post._id %>?_method=delete" method="post" class="d-inline">
+            <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
+          </form>
+        <% } %>
       </div>
-
     </div>
   </body>
 </html>
