검색기능 추가

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -13,7 +13,6 @@ body {
   overflow: hidden;
   text-overflow: ellipsis; /* 1 */
 }
-
 .board-table {
   table-layout: fixed;
 }
@@ -21,7 +20,6 @@ body {
 .board-table .date {
   width: 100px;
 }
-
 .post-body{
   white-space: pre-line; /* 2 */
 }
@@ -30,4 +28,10 @@ body {
 }
 .user-form {
   width: 400px;
+}
+.post-index-tool {
+  max-width: 450px;
+}
+.post-index-tool input[type='text']{
+  max-width: 130px;
 }
